# loci

./: .dockerignore  .env.example  .gitignore  .vulture_whitelist.py  LOCI_FLAGSHIP_REPORT.md  README.md  SOUL.md  backends.toml.example  docker-compose.dev.yml  docker-compose.yml  mypy.ini
a2a_server/: Dockerfile  README.md  client.py  loci-a2a.service  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
a2a_server/tests/: conftest.py  test_routing.py
mcp/: .env.example  Dockerfile  README.md  backends.py  batched_gen.py  embed_ops.py  graph_tools.py  grounding.py  llm_local.py  pyproject.toml  query_expand.py  requirements.txt  reranker.py  retrieval_eval.py  server.py  text_ops.py  verify.py
mcp/graph/: __init__.py  analytics.py  code_parse.py  kuzu_store.py  linker.py  queries.py
mcp/memcheck/: __init__.py  backend.py  cli.py  copilot_adapter.py  daemon.py  engine.py  hook_client.py  llm.py  mnemosyne.py  qdrant.py  verdict.py
mcp/memcheck/checks/: __init__.py  code_hallucination.py  contagion.py  (+4 more)
mcp/tests/: test_analytics.py  test_backend.py  test_backends.py  test_batched_gen.py  test_checks.py  test_code_parse.py  test_contradiction_llm.py  test_embed_ops.py  test_finding_lifecycle.py  test_gpu_warm.py  test_graph_facts.py  test_graph_integration.py  test_ground_tool.py  test_grounding.py  test_health_warm.py  test_kuzu_lease.py  test_kuzu_resilient.py  test_kuzu_store.py  test_linker.py  test_llm_local.py  test_mcp_integration.py  test_queries.py  test_query_expand.py  test_reembed_daemon.py  test_reflection_loop.py  test_reranker.py  test_retrieval_eval.py  test_text_ops.py  test_verdict.py  test_verify.py
(+128 files in other folders)
